--- a/Contact-form.html
+++ b/Contact-form.html
@@ -24,7 +24,10 @@
           </li>
 
           <li>
-            <a class="nav-option" href="card.html" style="font-weight: normal"
+            <a
+              class="nav-option"
+              href="home-card.html"
+              style="font-weight: normal"
               >HOME</a
             >
           </li>
