--- a/card.html
+++ b/card.html
@@ -44,7 +44,7 @@
 
       <div id="right-nav">
         <a href="Contact-form.html">
-          <button type="button">Contact M</button>
+          <button type="button">Contact Me</button>
         </a>
       </div>
     </nav>
