--- a/home-card.html
+++ b/home-card.html
@@ -19,7 +19,7 @@
         <ul>
           <li>
             <a class="nav-option" href="https://dumbways.id/" target="_blank">
-              <img src="Assets/images/img/icon.png" alt="DumbWays ID logo" />
+              <img src="assets/images/img/icon.png" alt="DumbWays ID logo" />
             </a>
           </li>
 
