--- a/home-card.html
+++ b/home-card.html
@@ -36,7 +36,7 @@
       </div>
 
       <div id="right-nav">
-        <a href="Contact-Form.html">
+        <a href="Contact-form.html">
           <button type="button">Contact Me</button>
         </a>
       </div>
@@ -58,8 +58,8 @@
           </div>
 
           <div id="CTAs">
-            <a href="Contact-Form.html">
-              <button type="button">Contact Me</button>
+            <a href="https://api.whatsapp.com/send/?phone=6282124548492">
+              <button type="button">Whatsapp</button>
             </a>
             <a
               href="http://bolderphil.crevado.com"
